# WwiseDemo

./: CMakeLists.txt  FrameResource.h  Platform.cpp  Platform.h  SkinnedMeshApp.cpp  SkinnedMeshApp.h  Ssao.h  audio.cpp  audio.h  gameobject.cpp  gameobject.h  main.cpp
Common/: FrameResource.h  GeometryGenerator.cpp  GeometryGenerator.h  LoadM3d.cpp  SkinnedData.h  d3dApp.cpp  d3dUtil.h
Plugins/: SamplePluginsPC_vc160.sln
Plugins/AkAudioInput/Sources/AudioEngineFX/: AkFXSrcAudioInput.cpp  AkFXSrcAudioInput.h  AkFXSrcAudioInputParams.cpp  AkFXSrcAudioInputParams.h
Plugins/AkAudioInput/Sources/AudioEngineFX/Win32/: AkAudioInputSourceWindows_vc160.vcxproj  AkAudioInputSourceWindows_vc170.vcxproj
Plugins/AkAudioInput/Sources/AudioEngineFX/WinGC/: AkAudioInputSourceWinGC_vc160.vcxproj  AkAudioInputSourceWinGC_vc170.vcxproj
Plugins/AkAudioInput/Sources/WwisePlugin/: AudioInputPlugin.cpp  AudioInputPlugin.h  resource.h
Plugins/AkAudioInput/Sources/WwisePlugin/Help/: TopicAlias.h
Plugins/AkAudioInput/Sources/WwisePlugin/Win32/: AudioInputPluginGUI.cpp  AudioInputPluginGUI.h
Plugins/AkDelay/Sources/AudioEngineFX/: AkDelayFX.cpp  AkDelayFX.h  AkDelayFXDSP.cpp  AkDelayFXDSP.h  AkDelayFXParams.cpp  AkDelayFXParams.h
Plugins/AkDelay/Sources/AudioEngineFX/Win32/: AkDelayFXWindows_vc160.vcxproj  AkDelayFXWindows_vc170.vcxproj
Plugins/AkDelay/Sources/AudioEngineFX/WinGC/: AkDelayFXWinGC_vc160.vcxproj  AkDelayFXWinGC_vc170.vcxproj
Plugins/AkDelay/Sources/WwisePlugin/: DelayPlugin.cpp  DelayPlugin.h  resource.h  stdafx.h
Plugins/AkDelay/Sources/WwisePlugin/Help/: TopicAlias.h
Plugins/AkDelay/Sources/WwisePlugin/Win32/: DelayPluginGUI.cpp  DelayPluginGUI.h
Plugins/AkSineTone/Sources/AudioEngineFX/: AkFXSrcSine.cpp  AkFXSrcSine.h  AkFXSrcSineParams.cpp  AkFXSrcSineParams.h
Plugins/AkSineTone/Sources/AudioEngineFX/Win32/: AkSineSourceWindows_vc160.vcxproj  AkSineSourceWindows_vc170.vcxproj
Plugins/AkSineTone/Sources/AudioEngineFX/WinGC/: AkSineSourceWinGC_vc160.vcxproj  AkSineSourceWinGC_vc170.vcxproj
Plugins/AkSineTone/Sources/WwisePlugin/: SinePlugin.cpp  SinePlugin.h  resource.h
Plugins/AkSineTone/Sources/WwisePlugin/Help/: TopicAlias.h
Plugins/AkSineTone/Sources/WwisePlugin/Win32/: SinePluginGUI.cpp  SinePluginGUI.h
Plugins/AkSink/Sources/AudioEngineFX/Win32/: AkSinkWindows_vc160.vcxproj  AkSinkWindows_vc170.vcxproj  AkSinkXAudio.cpp  AkSinkXAudio.h  SinkPluginParams.cpp  SinkPluginParams.h
Plugins/AkSink/Sources/WwisePlugin/: SinkPlugin.cpp  SinkPlugin.h  stdafx.cpp
Plugins/AkSink/Sources/WwisePlugin/Help/: TopicAlias.h
Plugins/AkSink/Sources/WwisePlugin/Win32/: SinkPluginGUI.cpp  SinkPluginGUI.h
Plugins/AkToneGenerator/Sources/AudioEngineFX/: AkLpFilter.cpp  AkLpFilter.h  AkToneGen.cpp  AkToneGen.h  AkToneGenDSP.cpp  AkToneGenParams.cpp  AkToneGenParams.h  AkWaveTables.h
Plugins/AkToneGenerator/Sources/AudioEngineFX/Win32/: AkToneSourceWindows_vc160.vcxproj  AkToneSourceWindows_vc170.vcxproj
Plugins/AkToneGenerator/Sources/AudioEngineFX/WinGC/: AkToneSourceWinGC_vc160.vcxproj  AkToneSourceWinGC_vc170.vcxproj
Plugins/AkToneGenerator/Sources/WwisePlugin/: ToneGenPlugin.cpp  ToneGenPlugin.h  resource.h  stdafx.cpp
Plugins/AkToneGenerator/Sources/WwisePlugin/Help/: TopicAlias.h
Plugins/AkToneGenerator/Sources/WwisePlugin/Win32/: ToneGenPluginGUI.cpp  ToneGenPluginGUI.h
Shaders/: LightingUtil copy.hlsl
SoundEngine/Common/: AkDefaultLowLevelIODispatcher.cpp  AkDefaultLowLevelIODispatcher.h  AkFileHelpersBase.h  AkFileLocationBase.cpp  AkFileLocationBase.h  AkFilePackage.h  AkFilePackageLowLevelIO.h  AkFilePackageLowLevelIO.inl  AkFilePackageLowLevelIODeferred.h  AkGeneratedSoundBanksResolver.cpp  AkGeneratedSoundBanksResolver.h  AkJobWorkerMgr.cpp  AkJobWorkerMgr.h  AkMultipleFileLocation.cpp  AkMultipleFileLocation.h  AkPlatformProfilerHookStubs.cpp  AkPlatformProfilerHooks.h
SoundEngine/POSIX/: AkDefaultIOHookDeferred.cpp  AkDefaultIOHookDeferred.h  AkFileHelpers.h  stdafx.h
SoundEngine/Win32/: AkDefaultIOHookDeferred.cpp  AkDefaultIOHookDeferred.h  AkFileHelpers.h  AkPlatformProfilerHooks.cpp
asset/: rain_restaurant.mtl
